[project]
name = "Yawnalyzer"
version = "0.1.0"
requires-python = ">= 3.13.8"
dependencies = [
    "datetime>=5.5",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "papermill>=2.6.0",
    "pillow>=12.1.1",
    "plotly>=6.5.0",
    "pyarrow>=23.0.0",
    "session-info>=1.0.1",
    "yasa>=0.6.5",
]
